--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="navbar navbar-dark headerBgColor p-0 m-0 shadow">
+<div class="navbar navbar-dark headerBgColor p-0 m-0 shadow-lg">
   <div class="container">
     <!-- <a class="navbar-brand p-0 m-0" href="#"><img src="../../assets/sicclogowhite.png"  height="70"></a> -->
     <a class="navbar-brand"><img src="../../assets/smis.png" height="45"></a>
