--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="login-bg">
 </div>
-<div class="container py-3"><img src="../../assets/smis.png" height="50"></div>
+<app-header></app-header>
 <div class="container mt-md-5 mt-3 pt-md-5">
   <div class="row align-items-center">
     <div class="mr-auto ml-auto card border-0 px-md-4 px-0 py-3 col-lg-5 col-md-7 col-11">
