--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,39 @@
-<div class="navbar navbar-dark headerBgColor p-0 m-0 shadow-lg">
+<div class="navbar navbar-dark navbar-expand-lg headerBgColor shadow p-md-0 m-md-0 sticky-top">
   <div class="container">
     <!-- <a class="navbar-brand p-0 m-0" href="#"><img src="../../assets/sicclogowhite.png"  height="70"></a> -->
     <a class="navbar-brand"><img src="../../assets/smis.png" height="45"></a>
+    <button *ngIf="loginMember" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  
+    <div *ngIf="loginMember" class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/system">system</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/system">Link</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Dropdown
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="#">Action</a>
+            <a class="dropdown-item" href="#">Another action</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Something else here</a>
+          </div>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" href="#">Disabled</a>
+        </li>
+      </ul>
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/login">Logout</a>
+        </li>
+      </ul>
+    </div>
   </div>
 </div>
