--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,13 +6,13 @@
       <span class="navbar-toggler-icon"></span>
     </button>
   
-    <div *ngIf="loginMember" class="collapse navbar-collapse" id="navbarSupportedContent">
+    <div *ngIf="loginMember" class="collapse navbar-collapse pl-md-3" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link" routerLink="/system">system</a>
+          <a class="nav-link" routerLink="/system">หน้าหลัก</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/system">Link</a>
+          <a class="nav-link" routerLink="consult">Link</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
