--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,10 +9,13 @@
     <div *ngIf="loginMember" class="collapse navbar-collapse pl-md-3" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link" routerLink="/system">หน้าหลัก</a>
+          <a class="nav-link" routerLink="/system"><i class="fas fa-home"></i> หน้าหลัก</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="consult">Link</a>
+          <a class="nav-link" routerLink="consult"><i class="fas fa-home"></i> ครูที่ปรึกษา</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="teach">การเรียนการสอน</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -25,13 +28,18 @@
             <a class="dropdown-item" href="#">Something else here</a>
           </div>
         </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#">Disabled</a>
-        </li>
       </ul>
       <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/login">Logout</a>
+        <li class="nav-item dropdown">
+          <button class="btn btn-outline-light dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <i class="fas fa-user-circle fa-lg"></i> {{ loginMember.member_name }}
+          </button>
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" routerLink="/system">ข้อมูลส่วนตัว</a>
+            <a class="dropdown-item" href="#">เปลี่ยนรหัสผ่าน</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" routerLink="/login"><i class="fas fa-sign-out-alt"></i> Logout</a>
+          </div>
         </li>
       </ul>
     </div>
