--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <div class="navbar navbar-dark navbar-expand-lg headerBgColor shadow p-md-0 m-md-0 sticky-top">
   <div class="container">
     <!-- <a class="navbar-brand p-0 m-0" href="#"><img src="../../assets/sicclogowhite.png"  height="70"></a> -->
-    <a class="navbar-brand"><img src="../../assets/smis.png" height="45"></a>
+    <a class="navbar-brand"><img src="assets/smis.png" height="45"></a>
     <button *ngIf="loginMember" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
