--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,3 +25,12 @@ body {
 .ng-invalid:not(form)  {
   border-right: 3px solid #a94442; /* red */
 }
+
+.input-group-text {
+  color: white;
+  background-color: $sicc-blue-lighten1;
+}
+
+input[type=text], input[type=password] {
+padding: 20px 10px;
+}
